--- a/css/style.css
+++ b/css/style.css
@@ -647,6 +647,22 @@ footer {
   text-align: center;
 }
 
+footer .socials-like {
+  margin-top: 30px;
+  margin-left: auto;
+  margin-right: auto;
+  width: -webkit-fit-content;
+  width: -moz-fit-content;
+  width: fit-content;
+  max-width: 700px;
+  min-width: 300px;
+}
+
+footer .socials-like__item {
+  display: inline-block;
+  width: 40%;
+}
+
 footer img {
   margin-top: 30px;
   margin-left: auto;
@@ -675,6 +691,132 @@ footer img {
   bottom: 0;
   right: -25px;
   z-index: 0;
+}
+
+.popup {
+  position: fixed;
+  overflow: auto;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  z-index: 9;
+  background-color: rgba(0, 0, 0, 0.5);
+  display: none;
+}
+
+.popup__content {
+  position: relative;
+  display: block;
+  margin: 30px auto;
+  max-width: 100%;
+}
+
+.popup__close {
+  position: absolute;
+  top: 0rem;
+  right: 1rem;
+  font-size: 3rem;
+  color: black;
+  border: none;
+  background: transparent;
+  cursor: pointer;
+}
+
+.product-info {
+  color: #1b1b1b;
+  display: none;
+}
+
+.product-info__content {
+  width: 600px;
+  padding: 40px;
+  background-color: white;
+}
+
+.product-info__title {
+  text-transform: uppercase;
+  font-size: 25px;
+  margin-top: 5px;
+  margin-bottom: 15px;
+  text-align: center;
+}
+
+.product-info__image {
+  max-width: 100%;
+  width: 400px;
+  margin-left: auto;
+  margin-right: auto;
+  display: block;
+}
+
+.product-info__text {
+  margin-top: 10px;
+  margin-bottom: 10px;
+}
+
+.call-offer__content {
+  background-image: url("../img/back-rect-7-small.png");
+  width: 380px;
+  padding: 40px 50px;
+}
+
+.call-offer .popup__close {
+  color: white;
+  font-size: 2rem;
+}
+
+.call-offer__title {
+  font-weight: 300;
+  font-family: 'Roboto', sans-serif;
+  font-size: 22px;
+  color: white;
+  text-align: center;
+  text-transform: none;
+  margin-top: 5px;
+  margin-bottom: 20px;
+}
+
+.call-offer form input, .call-offer form button {
+  display: block;
+  width: 100%;
+  margin-bottom: 12px;
+}
+
+.call-offer form button {
+  margin-top: 20px;
+}
+
+.thanks__content {
+  width: 380px;
+  background-color: #fff;
+  padding-bottom: 1px;
+}
+
+.thanks .popup__close {
+  color: #393939;
+  font-size: 2rem;
+}
+
+.thanks__header {
+  background-image: url("../img/back-rect-1-small.png");
+  padding: 1px 40px;
+}
+
+.thanks__title {
+  text-align: center;
+  font-weight: 600;
+  font-family: 'Roboto', sans-serif;
+  font-size: 22px;
+  color: #393939;
+  margin-top: 20px;
+  margin-bottom: 15px;
+}
+
+.thanks__text {
+  padding-left: 40px;
+  padding-right: 40px;
+  margin-bottom: 30px;
 }
 
 @media (max-width: 1419px) {
@@ -845,6 +987,9 @@ footer img {
     width: 67%;
     font-size: 13px;
     margin-left: 3%;
+  }
+  .product-info__content {
+    margin: 0;
   }
 }
 
