--- a/sass/style.sass
+++ b/sass/style.sass
@@ -191,6 +191,8 @@ a, button, input
             width: 100%
         button
             margin-top: 12px
+        .status
+            color: #fff
 
 .middle-offer
     background-image: url('../img/back-rect-7-small.png')
@@ -210,6 +212,8 @@ a, button, input
         button
             display: block
             margin: 12px auto 0
+        .status
+            color: #fff
     
 .section
     padding-top: 50px
@@ -594,36 +598,28 @@ footer
             margin-bottom: 12px
         button
             margin-top: 20px
-    &__form
-
-    .offer__name
-
-    .offer__mail
-
-    .offer__phone
-
-    .offer__submit
+        .status
+            color: white
 
 .thanks
-    // display: block
     &__content
-        width: 380px
+        width: 320px
         background-color: #fff
         padding-bottom: 1px
     .popup__close
-        color: #393939
+        color: #fff
         font-size: 2rem
     &__header
-        background-image: url('../img/back-rect-1-small.png')
+        background-image: url('../img/back-rect-7-small.png')
         padding: 1px 40px
     &__title
         text-align: center
-        font-weight: 600
+        font-weight: 400
         font-family: 'Roboto', sans-serif
         font-size: 22px
-        color: #393939
-        margin-top: 20px
-        margin-bottom: 15px
+        color: #fff
+        margin-top: 15px
+        margin-bottom: 10px
     &__text
         padding-left: 40px
         padding-right: 40px
@@ -912,3 +908,18 @@ footer
             margin-top: 5px
         &__info
             width: 68%
+
+    .thanks
+        &__content
+            width: 300px
+            max-width: 90%
+        &__header
+            padding: 1px 25px
+        &__title
+            font-size: 20px
+            margin-top: 12px
+            margin-bottom: 7px
+        &__text
+            padding-left: 30px
+            padding-right: 30px
+            margin-bottom: 20px
