--- a/public/css/style.css
+++ b/public/css/style.css
@@ -455,8 +455,8 @@ a, button, input {
 }
 
 .plus-in-video__video-item {
-  width: 600px;
-  height: 450px;
+  width: 620px;
+  height: 400px;
   border: 3px #fdf1cf solid;
   border-radius: 5px;
 }
@@ -575,8 +575,8 @@ a, button, input {
 }
 
 .about__video-item {
-  width: 600px;
-  height: 450px;
+  width: 460px;
+  height: 265px;
   border: 3px #fdf1cf solid;
   border-radius: 5px;
 }
@@ -898,9 +898,9 @@ footer img {
     right: -20px;
     width: 120%;
   }
-  .plus-in-video__video-item, .about-video__video-item {
-    width: 52vw;
-    height: 39vw;
+  .plus-in-video__video-item {
+    width: 50vw;
+    height: 32vw;
   }
   .many-bread__item:nth-child(3n) {
     display: none;
@@ -924,8 +924,8 @@ footer img {
   .plus-in-video__video-block {
     text-align: center;
   }
-  .about__video__video-item, .plus-in-video__video-item {
-    width: 80vw;
+  .plus-in-video__video-item {
+    width: 78vw;
     height: 50vw;
   }
   .our-foto__text:first-child {
@@ -977,9 +977,9 @@ footer img {
     width: 510px;
     height: 290px;
   }
-  .plus-in-video__video-item, .about__video-item {
-    width: 90vw;
-    height: 65vw;
+  .about__video-item {
+    width: 80vw;
+    height: 46vw;
   }
   .about__video-block {
     background: none;
@@ -1046,6 +1046,14 @@ footer img {
   }
   .about__video-block {
     margin-top: 15px;
+  }
+  .plus-in-video__video-item {
+    width: 90vw;
+    height: 58vw;
+  }
+  .about__video-item {
+    width: 90vw;
+    height: 52vw;
   }
   .section {
     padding-bottom: 40px;
