--- a/public/css/style.css
+++ b/public/css/style.css
@@ -637,11 +637,11 @@ a, button, input {
 .map-container .loader-default:after {
   position: absolute;
   top: 50%;
-  -webkit-transform: translateY(-24px);
-          transform: translateY(-24px);
+  -webkit-transform: translateY(-50%);
+          transform: translateY(-50%);
   left: 50%;
-  -webkit-transform: translateX(-24px);
-          transform: translateX(-24px);
+  -webkit-transform: translateX(-50%);
+          transform: translateX(-50%);
   width: 48px;
   height: 48px;
   content: '';
