--- a/public/sass/style.sass
+++ b/public/sass/style.sass
@@ -472,12 +472,10 @@ a, button, input
         
         &-default:after
             position: absolute
-            // top: calc(50% - 24px)
-            // left: calc(50% - 24px)
             top: 50%
-            transform: translateY(-24px)
+            transform: translateY(-50%)
             left: 50%
-            transform: translateX(-24px)
+            transform: translateX(-50%)
             width: 48px
             height: 48px
             content: ''
