Оптимизация загрузки скриптов

--- a/public/sass/style.sass
+++ b/public/sass/style.sass
@@ -5,7 +5,7 @@ $backBrown: $accentLight
 $textDark: #1b1b1b
 
 html
-    font-family: 'Roboto', sans-serif
+    font-family: 'Roboto', Arial, sans-serif
 body
     margin: 0
 a
@@ -69,7 +69,7 @@ a, button, input
 .header
     padding-bottom: 70px
     &__title
-        font-family: 'Roboto Condensed', 'Roboto', sans-serif
+        font-family: 'Roboto Condensed', 'Roboto'
         text-align: center
         margin-top: 40px
         margin-bottom: 10px
@@ -81,7 +81,7 @@ a, button, input
         text-align: center
         margin-top: 10px
         color: #272727
-        font-family: 'Roboto Condensed', 'Roboto', sans-serif
+        font-family: 'Roboto Condensed', 'Roboto'
         font-size: 22px
         font-weight: 700
         text-transform: uppercase
@@ -119,7 +119,7 @@ a, button, input
 
     &__submit
         height: 57px
-        font-family: 'Roboto Condensed', 'Roboto', sans-serif
+        font-family: 'Roboto Condensed', 'Roboto'
         color: #ffffff
         font-size: 18px
         font-weight: 700
@@ -167,7 +167,7 @@ a, button, input
     &__title
         text-align: center
         color: $accentLight
-        font-family: 'Roboto Condensed', 'Roboto', sans-serif
+        font-family: 'Roboto Condensed', 'Roboto'
         font-size: 16px
         text-transform: uppercase
     .offer-confident
@@ -212,7 +212,7 @@ a, button, input
         text-align: center
         text-transform: uppercase
         color: $textDark
-        font-family: 'Roboto Condensed', 'Roboto', sans-serif
+        font-family: 'Roboto Condensed', 'Roboto'
         font-size: 32px
         font-weight: 400
     &__subtitle-image
@@ -450,13 +450,11 @@ a, button, input
     .loader
         position: absolute
         z-index: 6
-        // top: -100%
         top: 0
         left: 0
         box-sizing: border-box
         width: 100%
         height: 100%
-        // overflow: hidden
         color: #000000
         transition: opacity .7s ease
         opacity: 0
@@ -633,7 +631,7 @@ footer
         font-size: 2rem
     &__title
         font-weight: 300
-        font-family: 'Roboto', sans-serif
+        font-family: 'Roboto'
         font-size: 22px
         color: white
         text-align: center
@@ -665,7 +663,7 @@ footer
     &__title
         text-align: center
         font-weight: 400
-        font-family: 'Roboto', sans-serif
+        font-family: 'Roboto'
         font-size: 22px
         color: #fff
         margin-top: 15px
